scrollbar hidden fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@
 .custom-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: #3b4b70; /* Color on hover */
 }
+
+.hide-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For Internet Explorer and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
